--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="eu">
-    <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width-device-width , initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width , initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-</head>
-    <body>
-        <header>
-            <form id="form">
-                <input type="text" id="search" class="search" placeholder="Type something..." />
-            </form>
-        </header>
-        <main id="main"></main>
-       <script src="script.js"></script> 
-    </body>
+  </head>
+  <body>
+    <header>
+      <form id="form">
+        <input
+          type="text"
+          id="search"
+          class="search"
+          placeholder="Type something..."
+        />
+      </form>
+    </header>
+    <main id="main"></main>
+    <script src="script.js"></script>
+  </body>
 </html>
